--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="styles.css" type="text/css"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
-  <title>Mac portfolio</title>
+  <title>Home Page</title>
 </head>
 
 <body>
