an update to index.html. made changes to the about me section on the home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <header>
+    <!-- Href needs to be updated. about could be changed to  -->
     <nav id="navbar">
       <ul class="nav-links">
         <li><a href="#Welcome" class="nav-link">About</a></li>
@@ -19,8 +20,9 @@
     </nav>
   </header>
   <section id="welcome-section">
+    <!-- Add more here  -->
     <h1>Hello, I'm Mac.</h1>
-    <p>A full stack developer</p>
+    <p>A skilled software developer with experience in HTML, CSS, Javascript, C#, and several industry standard frameworks. I'm a quick learner, collaborating closely with clients and colleagues to create efficient solutions to real-world problems. Lets work together to bring your ideas to life.</p>
   </section>
   <section id="projects">
     <h1>These are some of my projects</h1>
