updated nav bars in all html documents

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,15 @@
   <title>Contact</title>
 </head>
 <body>
+  <header>
+    <nav id="navbar">
+      <ul class="nav-links">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="#Welcome" class="nav-link">About</a></li>
+        <li><a href="#Projects" class="nav-link">Projects</a></li>
+      </ul>
+    </nav>
+  </header>
   
 </body>
 </html>
