--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- Href needs to be updated. about could be changed to  -->
     <nav id="navbar">
       <ul class="nav-links">
-        <li><a href="#Welcome" class="nav-link">About</a></li>
-        <li><a href="#Projects" class="nav-link">Projects</a></li>
-        <li><a href="#Contact" class="nav-link">Contact</a></li>
+        <li><a href="about.html" class="nav-link">About</a></li>
+        <li><a href="projects.html" class="nav-link">Projects</a></li>
+        <li><a href="contact.html" class="nav-link">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -64,7 +64,7 @@
         </p>
       </a>
     </div>
-    <a href="" class="show-all">Show All </a>
+    <a href="projects.html" class="show-all">Show All</a>
   </section>
   <section id="contact">
     <h1>Let's work together...</h1>
