--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,15 @@
   <title>Projects</title>
 </head>
 <body>
+  <header>
+    <nav id="navbar">
+      <ul class="nav-links">
+        <li><a href="about.html" class="nav-link">About</a></li>
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="contact.html" class="nav-link">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   
 </body>
 </html>
