comments on each html page with notes on what to add. some formatting changes

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <!-- an about section with a professional photo, maybe one of me in a coding environment -->
   <header>
     <nav id="navbar">
       <ul class="nav-links">
