--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,13 @@
   <title>Contact</title>
 </head>
 <body>
+  <!-- provide links to linked in, github, etc. provide a registration form for potential clients to fill out and submit to my email  -->
   <header>
     <nav id="navbar">
       <ul class="nav-links">
         <li><a href="index.html" class="nav-link">Home</a></li>
-        <li><a href="#Welcome" class="nav-link">About</a></li>
-        <li><a href="#Projects" class="nav-link">Projects</a></li>
+        <li><a href="about.html" class="nav-link">About</a></li>
+        <li><a href="projects.html" class="nav-link">Projects</a></li>
       </ul>
     </nav>
   </header>
