--- a/projects.html
+++ b/projects.html
@@ -8,11 +8,12 @@
   <title>Projects</title>
 </head>
 <body>
+  <!-- add a full page of projects + links to the live pages. could copy and alter css styling from home page -->
   <header>
     <nav id="navbar">
       <ul class="nav-links">
-        <li><a href="about.html" class="nav-link">About</a></li>
         <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="about.html" class="nav-link">About</a></li>
         <li><a href="contact.html" class="nav-link">Contact</a></li>
       </ul>
     </nav>
