--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <h1>Hello, I'm Mac.</h1>
     <p>A skilled software developer with experience in HTML, CSS, Javascript, C#, and several industry standard frameworks. I'm a quick learner, collaborating closely with clients and colleagues to create efficient solutions to real-world problems. Lets work together to bring your ideas to life.</p>
   </section>
+  <!-- add an image here -->
   <section id="projects">
     <h1>These are some of my projects</h1>
     <div class="projects">
@@ -65,9 +66,11 @@
     </div>
     <a href="projects.html" class="show-all">Show All</a>
   </section>
+  <!-- more styling here. maybe an image -->
   <section id="contact">
     <h1>Let's work together...</h1>
     <p class="coffee-question">How do you take your coffee?</p>
+    <!-- these should be additional links. unfinished code -->
     <div id="social-medias">
       <a href="https://freecodecamp.org/fccbaced7df-55cb-4dc3-bd22-1c5633fdb1bf" id="profile-link" target="_blank">
     </div>
